--- a/user/css/style.css
+++ b/user/css/style.css
@@ -13,7 +13,13 @@
     bottom: 45px;
     z-index: 99;
 }
-
+.contact{
+    position: fixed;
+    display: none;
+    right: 45px;
+    bottom: 45px;
+    z-index: 99;
+}
 
 /*** Spinner ***/
 #spinner {
