--- a/Admin/css/update.css
+++ b/Admin/css/update.css
@@ -4,7 +4,7 @@
     border:.1rem solid rgba(0,0,0,.2);
     background:#fff;
     padding:1.5rem;
-    margin: 0 2rem;
+    margin: 0 2rem 2rem 2rem;
 } 
 
 .view form .inputBox{
@@ -14,7 +14,7 @@
 }
 
 .view form .inputBox .input{
-    width:48%;
+    width:46.5%;
     margin: 0 1.5rem;
 }
 
@@ -85,7 +85,7 @@
 
 /* File input */
 .view form .inputBox .inputImage{
-    width:19%;
+    width:20%;
     margin: 0 1.5rem;
 }
 .view form .inputBox .inputImage span{
@@ -97,4 +97,43 @@
 
 .view form .inputBox .inputImage input{
     width: 100%;
+}
+
+.formImage{
+    padding:1.5rem;
+    display: flex;
+}
+
+.imageFile{
+    width: 17%;
+}
+
+.imageView{
+    width: 100%; 
+    height : 100px;
+    border-radius: 10px;
+
+}
+
+.imageFile span{
+    display:block;
+    padding:.5rem 0;
+    font-size: 1.7rem;
+    color:var(--light-color);
+}
+
+.inputFile{
+    display: flex;
+}
+
+.imageMain{
+    height: 150px;
+    width: auto;
+    border-radius: 5px;
+}
+
+.imageView{
+    width: auto;
+    height: 200px;
+    border-radius: 10px;
 }
