--- a/Admin/css/admin.css
+++ b/Admin/css/admin.css
@@ -208,15 +208,9 @@ main {
     padding: 1rem 2rem;
 }
 
-.dash-title {
-    color: var(--color-dark);
-    margin-bottom: 1rem;
-    font-size: 3rem;
-    color: var(--black);
-    font-weight: 450;
-}
 
 .dash-cards {
+    margin-top: 3rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 3rem;
@@ -235,7 +229,7 @@ main {
 }
 
 .card-body span {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: #777;
     padding-right: 1.5rem;
 }
