--- a/Customer/css/style.css
+++ b/Customer/css/style.css
@@ -437,3 +437,9 @@
     margin-right: 0;
     padding-right: 0;
     border-right: none;
+}
+.img-fluid{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
